--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     <span>Aplicacion Maestros Minerd</span>
                     <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
                 </li>
+                <li>
+                    <span>quizzes-app</span>
+                    <input type="button" value="Click Me" id="quizzes-app">
+                </li>
             </ul>
         </div>
     </main>
