--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                     <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
                 </li>
                 <li>
-                    <span>quizzes-app</span>
+                    <span>Quizzes App</span>
                     <input type="button" value="Click Me" id="quizzes-app">
+                </li>
+                <li>
+                    <span>Gesty App</span>
+                    <input type="button" value="Click Me" id="gesty-app">
                 </li>
             </ul>
         </div>
