--- a/gesty-app/index.html
+++ b/gesty-app/index.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            location.href = 'https://60049dd0a9166ecc3963277e--gesty-app.netlify.app';
+            location.href = 'https://6011b3cfe426f497930365fd--gesty-app.netlify.app/';
         })
     </script>
 </body>
