Se agrego el proyecto de maquetaciones-responsive

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     <span>Gesty App</span>
                     <input type="button" value="Click Me" id="gesty-app">
                 </li>
+                <li>
+                    <span>Maquetaciones responsive</span>
+                    <input type="button" value="Click Me" id="maquetaciones-responsive">
+                </li>
             </ul>
         </div>
     </main>
