se la anadio el responsive a la pagina home

--- a/index.html
+++ b/index.html
@@ -6,41 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 
 <body>
-    <main>
-        <h1>REAL MENU DE ELECCION DE WEBS</h1>
-        <div id="contenedor">
-            <ul>
-                <li>
-                    <span>Calculadora de Danos Dofus Touch</span>
-                    <input type="button" value="Click Me" id= "calculadora-dofus-touch">
-                </li>
-                <li>
-                    <span>Practica Crud HTML/CSS/JS</span>
-                    <input type="button" value="Click Me" id="practica-crud-html-css-js">
-                </li>
-                <li>
-                    <span>Aplicacion Maestros Minerd</span>
-                    <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
-                </li>
-                <li>
-                    <span>Quizzes App</span>
-                    <input type="button" value="Click Me" id="quizzes-app">
-                </li>
-                <li>
-                    <span>Gesty App</span>
-                    <input type="button" value="Click Me" id="gesty-app">
-                </li>
-                <li>
-                    <span>Maquetaciones responsive</span>
-                    <input type="button" value="Click Me" id="maquetaciones-responsive">
-                </li>
-            </ul>
+    <main class='container-fluid'>
+        <div class='row'>
+            <div class="col-12">
+                <h1>REAL MENU DE ELECCION DE WEBS</h1>
+                <div class=" mt-5">
+                    <ul>
+                        <li>
+                            <span>Calculadora de Danos Dofus Touch</span>
+                            <input type="button" value="Click Me" id="calculadora-dofus-touch">
+                        </li>
+                        <li>
+                            <span>Practica Crud HTML/CSS/JS</span>
+                            <input type="button" value="Click Me" id="practica-crud-html-css-js">
+                        </li>
+                        <li>
+                            <span>Aplicacion Maestros Minerd</span>
+                            <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
+                        </li>
+                        <li>
+                            <span>Quizzes App</span>
+                            <input type="button" value="Click Me" id="quizzes-app">
+                        </li>
+                        <li>
+                            <span>Gesty App</span>
+                            <input type="button" value="Click Me" id="gesty-app">
+                        </li>
+                        <li>
+                            <span>Maquetaciones responsive</span>
+                            <input type="button" value="Click Me" id="maquetaciones-responsive">
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </main>
-    <h2>Espacio Para la Payola: Produced By Brandon</h2>
+    <footer>Produced By Brandon</footer>    
     <script src="script.js"></script>
 </body>
 
