--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <main class='container-fluid'>
         <div class='row'>
             <div class="col-12">
-                <h1>REAL MENU DE ELECCION DE WEBS</h1>
+                <h1>MENU DE ELECCION DE WEB APLICATIONS</h1>
                 <div class=" mt-5">
                     <ul>
                         <li>
@@ -26,7 +26,7 @@
                             <input type="button" value="Click Me" id="practica-crud-html-css-js">
                         </li>
                         <li>
-                            <span>Aplicacion Maestros Minerd</span>
+                            <span>Minerd-teacher-app</span>
                             <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
                         </li>
                         <li>
@@ -38,15 +38,16 @@
                             <input type="button" value="Click Me" id="gesty-app">
                         </li>
                         <li>
-                            <span>Maquetaciones responsive</span>
-                            <input type="button" value="Click Me" id="maquetaciones-responsive">
+                            <span>Layouts-responsive</span>
+                            <input type="button" value="Click Me" id="layouts-responsive">
+                            
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </main>
-    <footer>Produced By Brandon</footer>    
+    <footer>Produced By Brandon</footer>
     <script src="script.js"></script>
 </body>
 
