updated the dofus touch calculator project and rename the crud html/css/js project to notes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <div class=" mt-5">
                     <ul>
                         <li>
-                            <span>Calculadora de Danos Dofus Touch</span>
+                            <span>Calculadora de Danos Dofus Touch(older)</span>
                             <input type="button" value="Click Me" id="calculadora-dofus-touch">
                         </li>
                         <li>
-                            <span>Practica Crud HTML/CSS/JS</span>
+                            <span>Notes</span>
                             <input type="button" value="Click Me" id="practica-crud-html-css-js">
                         </li>
                         <li>
