updated word in notes-project

--- a/notes-project/index.html
+++ b/notes-project/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <h1>Notes<br/>Html/Css/Js
+        <h1>Notes<br/>
         <h4>Gestionar Notas</h4>
 
         <div id="respaldo">
