add the generate stadistic tables from google form project

--- a/index.html
+++ b/index.html
@@ -14,40 +14,42 @@
     <main class='container-fluid'>
         <div class='row'>
             <div class="col-12">
-                <h1>MENU DE ELECCION DE WEB APLICATIONS</h1>
+                <h1>Application Choise Menu</h1>
                 <div class=" mt-5">
                     <ul>
                         <li>
                             <span>Calculadora de Danos Dofus Touch(older)</span>
-                            <input type="button" value="Click Me" id="calculadora-dofus-touch">
+                            <button class='btn' id="calculadora-dofus-touch">GO</button>
                         </li>
                         <li>
                             <span>Notes</span>
-                            <input type="button" value="Click Me" id="practica-crud-html-css-js">
+                            <button class='btn' id="practica-crud-html-css-js">GO</button>
                         </li>
                         <li>
                             <span>Minerd-teacher-app</span>
-                            <input type="button" value="Click Me" id="aplicacion-maestros-minerd">
+                            <button class='btn' id="aplicacion-maestros-minerd">GO</button>
                         </li>
                         <li>
                             <span>Quizzes App</span>
-                            <input type="button" value="Click Me" id="quizzes-app">
+                            <button class='btn' id="quizzes-app">GO</button>
                         </li>
                         <li>
                             <span>Gesty App</span>
-                            <input type="button" value="Click Me" id="gesty-app">
+                            <button class='btn' id="gesty-app">GO</button>
+                        <li>
+                            <span>Layouts Responsive</span>
+                            <button class='btn' id="layouts-responsive">GO</button>
                         </li>
                         <li>
-                            <span>Layouts-responsive</span>
-                            <input type="button" value="Click Me" id="layouts-responsive">
-                            
+                            <span>Generate Stadistic Tables Google Form</span>
+                            <button class='btn' id="generate-stadistic-table-google-form">GO</button>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </main>
-    <footer>Produced By Brandon</footer>
+    <footer>Produced By Brandox</footer>
     <script src="script.js"></script>
 </body>
 
