chat-app has been added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                             <span>Generate Stadistic Tables Google Form</span>
                             <button class='btn' id="generate-stadistic-table-google-form">GO</button>
                         </li>
+                        <li>
+                            <span>Chat App Real Time</span>
+                            <button class='btn' id="chat-app">GO</button>
+                        </li>
                     </ul>
                 </div>
             </div>
