Se aagrego el proyecto de master-chef-maquetacion y se hostio la aplicacion de notas basicas y la calculadora de dofus touch

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                             <span>Chat App Real Time</span>
                             <button class='btn' id="chat-app">GO</button>
                         </li>
+                        <li>
+                            <span>Master Chef Maquetacion</span>
+                            <button class='btn' id="mater-chef-maquetacion">GO</button>
+                        </li>
                     </ul>
                 </div>
             </div>
